--- a/qsd-motion.tex
+++ b/qsd-motion.tex
@@ -1,7 +1,7 @@
 %  LaTeX support: latex@mdpi.com 
 %  For support, please attach all files needed for compiling as well as the log file, and specify your operating system, LaTeX version, and LaTeX editor.
 
-\newcommand{\qsdpapertitle}{Inertia as Reconfiguration: The True Geometry of Motion in a Conserved Substrate}
+\newcommand{\qsdpapertitle}{Inertia and Motion Under the Substrate Response: A Structural Interpretation of Reconfiguration and Delay}
 \newcommand{\qsdauthorname}{Michael Bush}
 \newcommand{\qsdauthorinitials}{M.B.}
 \newcommand{\qsdauthoremail}{mbush@haddentechnologies.com}
@@ -221,7 +221,7 @@ Motion is one of the most foundational concepts in physics, yet its underlying n
 
 Einstein recognized this unresolved substrate in his own way. The indistinguishable state between rest and uniform motion, and the universal character of inertial resistance, were elevated to principles---yet never mechanistically derived. Even today, inertia remains unexplained: not in the mathematical sense, but in the physical. What is resisting? Where is that resistance stored? Why is motion preserved without effort---until it changes?
 
-This paper proposes that answers to these questions can be found not by discarding physics, but by descending beneath it. Using the framework of Quantum Substrate Dynamics (QSD), we re-express motion not as traversal through space, but as a process of scalar phase re-locking within a conserved coherence field. In this model, mass is not substance, but structure---a phase-stable knot in the substrate. Motion is the act of reconfiguring that structure under tension. Inertia becomes the substrate's resistance to that reconfiguration, and momentum is the measure of coherence already committed to that re-locking path.
+This paper proposes that answers to these questions can be found not by discarding physics, but by descending beneath it. Using the framework of Quantum Substrate Dynamics (QSD)~\cite{bush2025,bush-planck-2025,bush-coherence,bush-planck-ep}, but as a process of scalar phase re-locking within a conserved coherence field. In this model, mass is not substance, but structure---a phase-stable knot in the substrate. Motion is the act of reconfiguring that structure under tension. Inertia becomes the substrate's resistance to that reconfiguration, and momentum is the measure of coherence already committed to that re-locking path.
 
 Throughout this paper, we develop a first-principles reinterpretation of motion, inertia, and momentum using only structural conservation, scalar causality, and coherence continuity. We do not break classical laws---we show what generates them. Newton’s laws, Einstein’s relativity, and modern dynamics are recovered as surface-level summaries of deeper structural behavior. What emerges is a more intuitive, testable, and physically grounded model of motion: one that preserves everything physics has already taught us, but replaces axioms with structure and interpretation with cause.
 
@@ -264,7 +264,17 @@ This leads naturally to the definition of a coherence transport velocity, which 
     v_{\text{coh}} = \frac{L_{\text{coh}}}{t_{\text{tick}}},
 \end{equation}
 
-where \( L_{\text{coh}} \) is the characteristic size of the coherence envelope and \( t_{\text{tick}} \) is the scalar recovery time between permissible re-locking events. This expression reflects the maximum rate of substrate-supported motion for a given structure, bounded not by traversal limits, but by local coherence and causality constraints. It replaces geometric motion with structural pacing, preserving Lorentz consistency through scalar continuity.
+where \( L_{\text{coh}} \) is the characteristic size of the coherence envelope and \( t_{\text{tick}} \) is the scalar recovery time between permissible re-locking events. This expression reflects the maximum rate of substrate-supported motion for a given structure, bounded not by traversal limits, but by local coherence and causality constraints. It replaces geometric motion with structural pacing, preserving Lorentz consistency through scalar continuity, see Figure \ref{fig:coherence-transport-velocity}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/CTV.pdf}
+    \caption{
+    \textbf{Coherence Transport Velocity.} 
+    In Quantum Substrate Dynamics (QSD), motion is governed not by geometric traversal, but by the scalar re-locking of coherence structures across the substrate. The coherence transport velocity is defined as \( v_{\text{coh}} = \frac{L_{\text{coh}}}{t_{\text{tick}}} \), where \( L_{\text{coh}} \) is the effective coherence envelope size and \( t_{\text{tick}} \) is the local scalar recovery interval. This expression sets the maximum apparent speed at which coherent structures can move through the substrate without violating causal re-locking constraints.
+    }
+    \label{fig:coherence-transport-velocity}
+\end{figure}
 
 This ontological shift allows for a more physically grounded understanding of what it means for an object to be in motion, to accelerate, or to remain still. Stillness and uniform motion are no longer opposites—they are structurally indistinguishable in the absence of a tension gradient. Motion only arises when the substrate is required to reconfigure a phase structure under scalar constraint, which is experienced macroscopically as acceleration, resistance, and energy cost.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -310,7 +320,18 @@ By reinterpreting acceleration, deceleration, and momentum as aspects of scalar 
 
 In the classical view, weight is defined as the gravitational force acting on a mass: \( W = mg \), where \( g \) is the local gravitational field strength. This formulation describes what is measured, but does not explain what weight is in structural terms. Within the QSD framework, perceived weight arises from the substrate’s scalar tension gradient and the coherence structure’s resistance to being re-anchored into a lower-tension equilibrium.
 
-Gravity in QSD is not a force field, but a coherence tension gradient within the substrate. Mass-phase structures immersed in such a gradient experience a directional preference for scalar re-locking toward regions of lower tension. Free-falling objects follow this gradient naturally, undergoing continuous re-locking without resistance; no internal deformation occurs, and thus no weight is perceived.
+Gravity in QSD is not a force field, but a coherence tension gradient within the substrate. Mass-phase structures immersed in such a gradient experience a directional preference for scalar re-locking toward regions of lower tension. Free-falling objects follow this gradient naturally, undergoing continuous re-locking without resistance; no internal deformation occurs, and thus no weight is perceived, see Figure \ref{fig:weight-denied-relock}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\textwidth]{figures/weight.png}
+    \caption{
+    \textbf{Weight as Denied Re-locking.}
+    In the QSD framework, weight is not a force between masses but a structural phenomenon arising from coherence denial. A mass-phase coherence shell situated in a gravitational gradient attempts to re-lock into regions of lower scalar tension. When external constraints prevent this re-locking—such as contact with a surface—the substrate imposes a pushback against the denied direction. This denied reconfiguration manifests as weight: a scalar resistance to unfulfilled re-locking across a gradient. The gravitational vector reflects the substrate’s structural preference for re-lock alignment toward equilibrium.
+    }
+    \label{fig:weight-denied-relock}
+\end{figure}
+
 
 Weight only appears when a coherence structure is constrained against the gradient---such as when it is supported by a surface. In this case, the substrate continues to attempt re-locking the structure downward, but the coherence shell cannot resolve the tension gradient due to boundary opposition. This denial of equilibrium results in a continuous scalar pushback, experienced as weight. It is not a force transmitted through space, but the tension imposed by the substrate when a structure is held out of gradient-aligned motion.
 
@@ -352,7 +373,18 @@ The scalar recovery lag resulting from persistent curved motion can be modeled a
 where \( \Delta E_{\text{torsion}} \) is the accumulated torsional strain energy stored in the coherence structure, \( \tau \) is the scalar recovery timescale, and \( \gamma \) is a coupling factor relating tension offload to measurable thermal output. This relationship provides a falsifiable prediction: that post-rotation heating scales with coherence strain and scalar pacing lag, even in isolated systems.
 
 
-In QSD, angular momentum is structurally conserved but energetically costly. The longer or faster a body spins, the more curvature memory is invested in the substrate, and the more difficult it becomes to alter or interrupt that motion. This reframe explains gyroscopic stability, spin decay, and inertial resistance from first principles, without invoking mass as a primitive or abstract conservation rules.
+In QSD, angular momentum is structurally conserved but energetically costly. The longer or faster a body spins, the more curvature memory is invested in the substrate, and the more difficult it becomes to alter or interrupt that motion. This reframe explains gyroscopic stability, spin decay, and inertial resistance from first principles, without invoking mass as a primitive or abstract conservation rules, see Figure \ref{fig:inertial-resistance}.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{figures/inertia.png}
+    \caption{
+    \textbf{Inertial Resistance and Scalar Pacing.}
+    In Quantum Substrate Dynamics (QSD), inertial resistance arises from the delay between scalar pacing intervals and the structural reconfiguration of a mass-phase boundary. As a coherence structure accelerates, its re-locking into the substrate becomes desynchronized, resulting in a temporary lag or deformation. This delay, represented by the scalar recovery time \( \tau_{\text{scalar}} \), defines the pacing-limited resistance experienced as inertia. The substrate cannot re-lock the boundary faster than its causal capacity permits, making inertia a time-constrained response rather than an intrinsic mass property.
+    }
+    \label{fig:inertial-resistance}
+\end{figure}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Energy and Motion}
 
@@ -588,6 +620,9 @@ These equations serve as the foundational structural mechanics for QSD-based mot
 % Reference 
 \bibitem{bush-coherence}
 Bush, M. The Coherence Envelope: Defining the Minimum Structural Unit of Action in Quantum Substrate Dynamics. {\em Preprints} {\bf 2025}, \url{https://doi.org/10.20944/preprints202506.2353.v1}.
+% Reference 
+\bibitem{bush-planck-ep}
+Bush, M. Planck Energy as Collapse Limit: A Structural Interpretation of $E_P$ in Quantum Substrate Dynamics. {\em Preprints} {\bf 2025}, \url{https://doi.org/10.20944/preprints202507.0080.v1}.
 % Reference 
 \bibitem{planck1901}
 \textbf{Journal article.} Planck, M. (1901). On the Law of Distribution of Energy in the Normal Spectrum. \textit{Annalen der Physik}, 4(553–563). \url{https://doi.org/10.1002/andp.19053221004}
