--- a/qsd-motion.tex
+++ b/qsd-motion.tex
@@ -256,7 +256,7 @@ From this perspective, velocity is not a primitive variable, but an emergent mea
 
 Space and time are no longer treated as background coordinates, but as emergent properties of the substrate's capacity to support structured coherence. Spatial displacement corresponds to the successful transfer of a coherence structure across sequential substrate regions; temporal progression arises from the scalar recovery interval required between offload and re-lock events. In this formulation, time is inherently directional, rooted in the causal pacing of coherence recovery rather than in geometric reversibility.
 
-The substrate itself does not flow, stretch, or move. It acts as a conserved scaffold of potential phase anchoring. Motion is not motion of matter through space, but the motion of structure through substrate permission. All classical kinematics are reinterpreted as large-scale summaries of this scalar-guided coherence realignment.
+The substrate itself does not flow or move, and it deforms only under conserved coherence strain. It acts as a stationary, conserved scaffold for phase anchoring. Motion is not motion of matter through space, but the motion of structure through substrate permission. All classical kinematics are reinterpreted as large-scale summaries of this scalar-guided coherence realignment.
 
 This leads naturally to the definition of a coherence transport velocity, which represents the effective speed at which a phase-locked structure can re-lock into adjacent substrate regions:
 
@@ -339,6 +339,8 @@ This mechanism naturally explains why objects in free fall feel weightless: thei
 
 Weight, in QSD, is not an intrinsic interaction between two masses, but a local phenomenon resulting from the interruption of scalar gradient flow. It scales with the steepness of the coherence tension gradient and the coherence mass’s inability to reconfigure. This interpretation offers a structural origin for the sensation of weight, grounded entirely in substrate dynamics and conservation.
 
+This scalar resistance also clarifies gravitational behavior without invoking attractive forces. In QSD, a mass-phase structure deforms the substrate by introducing a coherence tension gradient. This gradient represents an elevated strain energy profile that the substrate seeks to resolve. When a second coherence structure enters this gradient, it experiences a re-locking tendency toward regions of lower substrate tension—not because it is pulled, but because the substrate permits structural change in the direction of minimal deformation cost. In this view, motion in a gravitational field arises from the substrate’s preference for coherence resolution, not external force, preserving both conservation and causal continuity.
+
 To express weight as a consequence of substrate tension gradient resistance, we define the scalar push back integral:
 
 \begin{equation}
@@ -346,6 +348,10 @@ To express weight as a consequence of substrate tension gradient resistance, we 
 \end{equation}
 
 where \( \rho(\vec{r}) \) is the local coherence density and \( \Phi_{\text{coh}}(\vec{r}) \) is the scalar coherence potential describing tension alignment within the substrate. This expression captures the substrate’s attempt to resolve mass-phase structures into equilibrium and formalizes weight as the reaction to denied scalar re-locking in a downward gradient.
+
+In the Quantum Substrate Dynamics (QSD) framework, Newton’s second law is not discarded, but reinterpreted as a large-scale approximation of substrate resistance to coherence reconfiguration. The classical formulation \( F = ma \) becomes a surface-level expression of the structural tension that arises when a mass-phase coherence structure is denied alignment with a scalar tension gradient. Acceleration does not result from force acting on mass, but from a directional increase in scalar re-locking demand. When this reconfiguration is obstructed—such as when a mass is supported against a gravitational gradient—the substrate imposes a pushback proportional to both the steepness of the scalar potential (\( \nabla \Phi_{\text{coh}} \)) and the structure’s resistance to re-locking. In this view, what we interpret as "force" is actually substrate tension attempting to complete a denied scalar reconfiguration, and "mass" is the scalar reconfiguration difficulty associated with a coherence envelope. Newton’s law is thus reframed not as a fundamental equation of motion, but as an emergent descriptor of a deeper substrate effort to resolve phase misalignment under tension.
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Rotation and Angular Momentum}
